--- a/work/10176.css
+++ b/work/10176.css
@@ -1,18 +1,19 @@
-body {
+
+.bg {
     background: lightblue;
     color: black;
 }
-h2 {
+.big {
     text-align: center;
     font-size: 18pt;
     color: purple;
 }
-h3 {
+.header {
     text-align: center;
     font-size: 18pt;
     color: blue;
 }
-p {
+.text {
     text-align: center;
     font-style: normal;
     color: black;
